--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -17,6 +17,7 @@
 
 @import "homepage/cover_story";
 @import "homepage/homepage_donate_and_subscribe";
+@import "homepage/index";
 @import "homepage/promises";
 
 @import "page/show";
