Fix newsletter subscribing

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -75,7 +75,7 @@
           <form class="subscribe-to-newsletter-form" action="https://demagog.us4.list-manage.com/subscribe/post" method="POST">
             <input type="hidden" name="u" value="55104956ab8c4db41d4cd7e55">
             <input type="hidden" name="id" value="f2c56d2e38">
-            <input type="email" class="email-input" placeholder="Váš e-mail" name="MERGE0" autocapitalize="off" autocorrect="off">
+            <input type="email" class="email-input" placeholder="Váš e-mail" name="MERGE0" id="MERGE0" autocapitalize="off" autocorrect="off">
             <button type="submit" class="submit-button">Začít odebírat</button>
             <div class="accept-terms">
               Stisknutím „Začít odebírat‟ souhlasíte se zpracováním e-mailu dle <a href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
