--- a/app/assets/stylesheets/homepage/index.scss
+++ b/app/assets/stylesheets/homepage/index.scss
@@ -16,6 +16,10 @@
 
       > p {
         font-size: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
 
@@ -40,13 +44,13 @@
           position: absolute;
           top: 50%;
           left: 50%;
-          width: 270px;
-          height: 62px;
-          margin: -31px 0 0 -135px;
+          width: 280px;
+          height: 52px;
+          margin: -26px 0 0 -135px;
           display: flex;
           justify-content: center;
           align-items: center;
-          background: rgba(0, 0, 0, 0.7);
+          background: rgba(0, 0, 0, 0.5);
           border-radius: 100px;
           color: white;
           font-size: 20px;
@@ -65,7 +69,7 @@
 
         &:hover, &:active {
           > .button-label {
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.7);
           }
         }
       }
@@ -77,7 +81,7 @@
 
       > .intro-text {
         margin-right: 0;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
       }
     }
   }
