--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -10,7 +10,7 @@
       <div class="intro-video">
         <button type="button" data-action="homepage--index#showIntroVideoModal">
           <img src="<%= asset_path("homepage-intro-video-thumbnail.png") %>" alt="">
-          <span class="button-label">Co je Demagog.cz</span>
+          <span class="button-label">Co je Demagog.cz?</span>
         </button>
       </div>
     </div>
