--- a/app/assets/stylesheets/homepage/index.scss
+++ b/app/assets/stylesheets/homepage/index.scss
@@ -29,6 +29,7 @@
       > button {
         position: relative;
         display: block;
+        width: 100%;
         margin: 0;
         padding: 0;
         border: none;
