--- a/app/assets/stylesheets/homepage/index.scss
+++ b/app/assets/stylesheets/homepage/index.scss
@@ -21,6 +21,17 @@
           margin-bottom: 0;
         }
       }
+
+      > ul {
+        font-size: 20px;
+        margin: 0 0 1rem 0;
+        padding: 0 0 0 2rem;
+
+        > li {
+          margin: 0;
+          padding: 0;
+        }
+      }
     }
 
     > .intro-video {
