--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -50,7 +50,7 @@
         <section class="donate-section">
           <h2>Podpořte Demagog.cz</h2>
           <p>
-            Fungujeme jen díky podpoře od&nbsp;čtenářů, jako jste vy.
+            Fungujeme díky podpoře od&nbsp;čtenářů, jako jste vy.
           </p>
           <div style="margin: 20px 0">
             <div data-darujme-widget-token="vhm7bzesjyb2jbdy">&nbsp;</div>
