Update facebook 3rd party factchecking badge

--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -30,9 +30,9 @@
   </aside>
 
   <aside class="organizations" id="facebook-partner">
-    <h2>Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Facebook:</h2>
+    <h2>Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Meta:</h2>
     <p>
-      <a href="https://www.facebook.com/journalismproject/programs/third-party-fact-checking?content_id=Ez92MVl4asoxvNL" target="_blank">
+      <a href="https://fb.me/Third-Party-Fact-Checking" target="_blank">
         <img class="lazy-load" data-src="<%= asset_path("partners/facebook-factchecking-partner.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
       </a>
     </p>
