--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -3,7 +3,7 @@
     <h2>Projekt Demagog.cz podporují:</h2>
     <p>
       <a title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
-        <img class="lazy-load" data-src="<%= asset_path("partners/nfnz.svg") %>" />
+        <img loading="lazy" src="<%= asset_path("partners/nfnz.svg") %>" />
       </a>
     </p>
   </aside>
@@ -12,10 +12,10 @@
     <h2>Projekt Demagog.cz spolupracuje s:</h2>
     <p>
       <a title="Little Greta" href="http://littlegreta.co.uk/">
-        <img class="lazy-load" data-src="<%= asset_path('partners/little-greta.svg') %>" />
+        <img loading="lazy" src="<%= asset_path('partners/little-greta.svg') %>" />
       </a>
       <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
-        <img class="lazy-load" data-src="<%= asset_path("partners/newton-media.png") %>" />
+        <img loading="lazy" src="<%= asset_path("partners/newton-media.png") %>" />
       </a>
     </p>
   </aside>
@@ -33,7 +33,7 @@
     <h2>Demagog.cz ověřuje pravdivost vybraného obsahu pro společnost Meta:</h2>
     <p>
       <a href="https://fb.me/Third-Party-Fact-Checking" target="_blank">
-        <img class="lazy-load" data-src="<%= asset_path("partners/facebook-factchecking-partner.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
+        <img loading="lazy" src="<%= asset_path("partners/facebook-factchecking-partner.png") %>" alt="Badge of independent third-party facth-checking partner of Facebook" />
       </a>
     </p>
   </aside>
