--- a/app/assets/stylesheets/shared/_partners.scss
+++ b/app/assets/stylesheets/shared/_partners.scss
@@ -15,9 +15,10 @@
     }
 
     a {
-      display: inline-block;
+      display: flex;
       flex: 0 0 135px;
       margin-right: 25px;
+      margin-bottom: 25px;
     }
 
     img {
