--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -5,6 +5,12 @@
       <a title="Nadační fond nezávislé žurnalistiky" href="https://www.nfnz.cz/">
         <img loading="lazy" src="<%= asset_path("partners/nfnz.svg") %>" />
       </a>
+      <a title="Národní plán obnovy" href="https://www.planobnovycr.cz/">
+        <img loading="lazy" src="<%= asset_path("partners/npo.png") %>" />
+      </a>
+      <a title="Evropská unie" href="https://next-generation-eu.europa.eu/index_cs">
+        <img loading="lazy" src="<%= asset_path("partners/nextgenerationeu.png") %>" />
+      </a>
     </p>
   </aside>
 
