--- a/app/views/shared/_speaker_with_stats.html.erb
+++ b/app/views/shared/_speaker_with_stats.html.erb
@@ -1,8 +1,8 @@
 <% speaker_presenter = SpeakerPresenter.new(speaker) %>
 
 <a class="container-speaker-with-stats" href="<%= speaker_path(speaker_presenter.speaker) %>">
-  <%= render(partial: 'shared/portrait', object: speaker_presenter.portrait_speaker, as: :speaker) %>
-  
+  <%= render(PortraitComponent.new(speaker: speaker_presenter.portrait_speaker, lazy_loaded: false)) %>
+
   <div class="name-and-stats">
     <h3 class="name">
       <span class="name-inner">
