Add component tests

--- a/app/components/image_component.html.erb
+++ b/app/components/image_component.html.erb
@@ -1,5 +1,5 @@
 <% if @lazy %>
-  <%= image_tag  @src, alt: @alt %>
+  <%= image_tag  @src, alt: @alt, loading: "lazy" %>
 <% else %>
-  <%= image_tag  @src, alt: @alt, lazy: 'loading' %>
+  <%= image_tag  @src, alt: @alt %>
 <% end %>
