--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -174,7 +174,7 @@
     margin: 0 -2rem;
     padding: 2rem 2rem 1rem;
   }
-
+  /*
   .container {
     display: flex;
     flex-direction: row;
@@ -184,9 +184,11 @@
     box-sizing: border-box;
   }
 
+
   header {
     flex: 5 0 0px;
   }
+  */
 
   #main-menu {
     flex: 7 0 0px;
